// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game should render 1`] = `
<div
  className="game"
>
  <Board
    onClick={[Function]}
    squares={
      Array [
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "",
      ]
    }
  />
  <GameInfo
    status=""
  >
    <Component
      key="0"
      onClick={[Function]}
      step={0}
    />
  </GameInfo>
</div>
`;

exports[`Game should set X as firsat move adn O as second 1`] = `
<div
  className="game"
>
  <Board
    onClick={[Function]}
    squares={
      Array [
        "",
        "",
        "O",
        "X",
        "",
        "",
        "",
        "",
        "",
      ]
    }
  />
  <GameInfo
    status=""
  >
    <Component
      key="0"
      onClick={[Function]}
      step={0}
    />
    <Component
      key="1"
      onClick={[Function]}
      step={1}
    />
    <Component
      key="2"
      onClick={[Function]}
      step={2}
    />
  </GameInfo>
</div>
`;

exports[`Game should set X as firsat move adn O as second 2`] = `
<div
  className="game"
>
  <Board
    onClick={[Function]}
    squares={
      Array [
        "",
        "",
        "O",
        "X",
        "",
        "",
        "",
        "",
        "",
      ]
    }
  />
  <GameInfo
    status=""
  >
    <Component
      key="0"
      onClick={[Function]}
      step={0}
    />
    <Component
      key="1"
      onClick={[Function]}
      step={1}
    />
    <Component
      key="2"
      onClick={[Function]}
      step={2}
    />
  </GameInfo>
</div>
`;

exports[`Game should set X on clicked move 1`] = `
<div
  className="game"
>
  <Board
    onClick={[Function]}
    squares={
      Array [
        "",
        "",
        "",
        "X",
        "",
        "",
        "",
        "",
        "",
      ]
    }
  />
  <GameInfo
    status=""
  >
    <Component
      key="0"
      onClick={[Function]}
      step={0}
    />
    <Component
      key="1"
      onClick={[Function]}
      step={1}
    />
  </GameInfo>
</div>
`;
